fail_crate/tests/rename_no_string.stderr
error: Expected string literal after `rename =`.
 --> fail_crate/tests/rename_no_string.rs:4:7
  |
4 | #[new(rename =)]
  |       ^^^^^^^^
